# rss-lambda

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  app.py  compose.production.yaml  docker-compose.tensorflow-serving.yml  docker-compose.yml  fly.toml  pyproject.toml  requirements.txt  run.sh  test-rss.xml  uwsgi.ini
.devcontainer/: devcontainer.json
.github/workflows/: test-and-build.yml  test-build-deploy.yml
blobs/: .gitignore  download.sh
rss_lambda/: __init__.py  abstract_expensive_rss_lambda.py  file_cache.py  lambdas.py  llava.py  process_rss_text.py  rss_image_gender.py  rss_image_recognition.py  rss_image_recognition_tf.py  rss_image_utils.py  rss_lambda.py  rss_lambda_error.py  rss_merger.py  test_image_recog.py  test_lambdas.py  test_merger.py  test_rss_image_recognition.py  test_rss_image_recognition_tf.py  test_rss_merger.py  test_simple_filters.py  test_to_image_feed.py  test_utils.py  yolov3.py  yolov3_tf.py
rss_lambda/image_recog/: abstract_expensive_rss_lambda.py  file_cache.py  image_recog.py  yolov3.py
rss_lambda/merger/: merger.py
rss_lambda/simple_filters/: filter_lambda.py  simple_filters.py
rss_lambda/to_image_feed/: to_image_feed.py
rss_lambda/utils/: image_utils.py  process_rss_text.py
static/: index.html  style.css
