[project]
name = "rss-lambda"
version = "0.1.0"
description = "https://rss-lambda.xyz/"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "Flask==3.0.0",
    "feedparser==6.0.11",
    "requests==2.31.0",
    "lxml==5.3.0",
    "beautifulsoup4==4.12.3",
    "sentry-sdk[flask]==1.43.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
